# RBeaver

./: Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: build-advanced.yml  build-simple.yml  build.yml
src/: actions.rs  assets.rs  connection_dialog.rs  database.rs  database_navigator.rs  database_structure.rs  database_test.rs  lazy_loader.rs  lazy_tree.rs  lib.rs  main.rs  mainwindow.rs  menubar.rs  statusbar.rs  toolbar.rs  tree.rs
src/connection/: binding.rs  manager.rs  mod.rs  pool_manager.rs
