[package]
name = "rbeaver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
gpui = "0.2.2"
gpui-component = "0.3.1"
rust-embed = "8.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
tokio-postgres = "0.7"
postgres-native-tls = "0.5"
native-tls = "0.2"
deadpool-postgres = "0.14.1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
