[package]
name = "rbeaver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
gpui = "0.2.2"
gpui-component = "0.3.1"
rust-embed = "8.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
postgres = "0.19"
r2d2 = "0.8"
r2d2_postgres = "0.18"
threadpool = "1.0"
